@@ -123,6 +123,10 @@ lib/SPVM/Sys/Time.c
 lib/SPVM/Sys/Time.config
 lib/SPVM/Sys/Time.pm
 lib/SPVM/Sys/Time.spvm
+lib/SPVM/Sys/Time/Timespec.c
+lib/SPVM/Sys/Time/Timespec.config
+lib/SPVM/Sys/Time/Timespec.pm
+lib/SPVM/Sys/Time/Timespec.spvm
 lib/SPVM/Sys/Time/Timeval.c
 lib/SPVM/Sys/Time/Timeval.config
 lib/SPVM/Sys/Time/Timeval.pm
