@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+use SPVM::Builder::Config;
+
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
+
+$config;
